# dotfiles

./: .gitignore  .gitmodules  alacritty.yml  install  install.sh  mason  setup  zsh  zshenv  zshrc
alacritty/: DoomOne.yml  alacritty.toml  alacritty.yml
alacritty/colors/: Darkside.yml  DimmedMonokai.yml  DraculaPlus.yml  Galizur.yml  MaterialOcean.yml  OceanicNext.yml  idk.yml  tokyo-night.toml  tokyo-night.yml
dotfiles-rs/: Cargo.toml
dotfiles-rs/src/: args.rs  config.rs  main.rs  workspaces.rs
eww/: cat  eww.scss  eww.yuck
eww/sccs/: colors.scss
eww/scripts/: battery  get-current-workspace  get-workspaces  listen  network  osd-timeout  stage
eww/scss/: colors.scss  scale-fixes.scss  topbar.scss  variables.scss  workspace-section.scss
eww/widgets/: arch-button.yuck  battery.yuck  brightness.yuck  clock.yuck  media.yuck  network.yuck  osd.yuck  volume.yuck  workspaces.yuck
eww/windows/: brightness-osd.yuck  sidebar.yuck  topbar.yuck  volume-osd.yuck
functions/: cn  functions  g  nv  pm  searchpac  unknow
hypr/: hyprland.conf  hyprpaper.conf
hypr/presets/: default.hl  excalibur.hl  onimaru.hl
hypr/scripts/: toggle_performance.sh
hypr/shared/: animations.hl  binds.hl  (+7 more)
neovim/: init.lua
nvim/: chadrc.lua  init.lua  lazy-lock.json  plugins.lua
rofi/: launcher.rasi  launcher.sh  main.rasi  powermenu.rasi  powermenu.sh
rustify/: Cargo.toml
scripts/: brightness  jellyfin  media  move-windows  reset-windows  volume  workspace  zfs-helper
swayidle/: config
swaylock/: config
tmux/: tmux.conf
zsh/: .zcompdump  .zprofile  .zshenv  .zshrc
(+40 files in other folders)
