[package]
name    = "dotfiles_rs"
version = "0.2.0"
edition = "2021"

[dependencies]
hyprland   = "=0.4.0-alpha.1"
clap       = { version = "4.5.4", features = ["derive"] }
indexmap   = { git = "https://github.com/masonesl/indexmap.git" }
serde_json = "1.0.116"

[[bin]]
name = "workspace-rs"
path = "src/main.rs"
